; ModuleID = '/home/carl/AnghaBench/radare2/libr/anal/extr_class.c_r_anal_class_delete_attr.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/anal/extr_class.c_r_anal_class_delete_attr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@R_ANAL_CLASS_ERR_OTHER = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i32, i8*)* @r_anal_class_delete_attr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @r_anal_class_delete_attr(i32* %0, i8* %1, i32 %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32 %2, i32* %8, align 4
  store i8* %3, i8** %9, align 8
  %13 = load i8*, i8** %7, align 8
  %14 = call i8* @r_str_sanitize_sdb_key(i8* %13)
  store i8* %14, i8** %10, align 8
  %15 = load i8*, i8** %10, align 8
  %16 = icmp ne i8* %15, null
  br i1 %16, label %19, label %17

17:                                               ; preds = %4
  %18 = load i32, i32* @R_ANAL_CLASS_ERR_OTHER, align 4
  store i32 %18, i32* %5, align 4
  br label %39

19:                                               ; preds = %4
  %20 = load i8*, i8** %9, align 8
  %21 = call i8* @r_str_sanitize_sdb_key(i8* %20)
  store i8* %21, i8** %11, align 8
  %22 = load i8*, i8** %11, align 8
  %23 = icmp ne i8* %22, null
  br i1 %23, label %28, label %24

24:                                               ; preds = %19
  %25 = load i8*, i8** %10, align 8
  %26 = call i32 @free(i8* %25)
  %27 = load i32, i32* @R_ANAL_CLASS_ERR_OTHER, align 4
  store i32 %27, i32* %5, align 4
  br label %39

28:                                               ; preds = %19
  %29 = load i32*, i32** %6, align 8
  %30 = load i8*, i8** %10, align 8
  %31 = load i32, i32* %8, align 4
  %32 = load i8*, i8** %11, align 8
  %33 = call i32 @r_anal_class_delete_attr_raw(i32* %29, i8* %30, i32 %31, i8* %32)
  store i32 %33, i32* %12, align 4
  %34 = load i8*, i8** %10, align 8
  %35 = call i32 @free(i8* %34)
  %36 = load i8*, i8** %11, align 8
  %37 = call i32 @free(i8* %36)
  %38 = load i32, i32* %12, align 4
  store i32 %38, i32* %5, align 4
  br label %39

39:                                               ; preds = %28, %24, %17
  %40 = load i32, i32* %5, align 4
  ret i32 %40
}

declare dso_local i8* @r_str_sanitize_sdb_key(i8*) #1

declare dso_local i32 @free(i8*) #1

declare dso_local i32 @r_anal_class_delete_attr_raw(i32*, i8*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
